--- a/config/database.yml
+++ b/config/database.yml
@@ -12,13 +12,27 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter:  postgresql
-  host:     localhost
+# development:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_development
+#   pool:     5
+#   template: template0
+
+default: &default
+  adapter: postgresql
   encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
+
+development:
+  <<: *default
   database: choresApp_development
-  pool:     5
-  template: template0
+
+
+
 
 
 
@@ -40,18 +54,26 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: choresApp_test
-  pool:     5
+# test:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_test
+#   pool:     5
 
+test:
+  <<: *default
+  database: choresApp_test
 
 production:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
+  <<: *default
   database: choresApp_production
-  pool:     5
+  password: 
+
+# production:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_production
+#   pool:     5
 
