--- a/config/database.yml
+++ b/config/database.yml
@@ -12,13 +12,33 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter:  postgresql
-  host:     localhost
+# development:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_development
+#   pool:     5
+#   template: template0
+default: &default
+  adapter: postgresql
   encoding: unicode
+
+    pool: 5
+
+development:
+  <<: *default
   database: choresApp_development
-  pool:     5
-  template: template0
+
+test:
+  <<: *default
+  database: choresApp_test
+
+  production:
+  <<: *default
+  database: choresApp_production
+
+  password: 
+
 
 
 
@@ -40,18 +60,18 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: choresApp_test
-  pool:     5
+# test:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_test
+#   pool:     5
 
 
-production:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: choresApp_production
-  pool:     5
+# production:
+#   adapter:  postgresql
+#   host:     localhost
+#   encoding: unicode
+#   database: choresApp_production
+#   pool:     5
 
